--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -79,13 +79,108 @@
     <h2 style="text-transform: uppercase; font-weight: 200">Find us</h2>
 </div>
 
-<div class="msgCont" style="height: 40vh">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.5322060120952!2d121.01612500000002!3d14
-        .568722999999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9a152621d85%3A0xb143575c8553624f!2sTim%
-        20Building!5e0!3m2!1sen!2sph!4v1741067470782!5m2!1sen!2sph" width="800" height="550" style="border:0;"
-        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
+<div class="msgCont" style="height: 60vh; display: flex; justify-content: center; align-items: center;">
+    <div style="width: 100%; max-width: 800px;">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.5322060120952!2d121.01612500000002!3d14.568722999999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9a152621d85%3A0xb143575c8553624f!2sTim%20Building!5e0!3m2!1sen!2sph!4v1741067470782!5m2!1sen!2sph"
+                width="100%" height="550" style="border:0; display: block; margin: auto;"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    </div>
 </div>
+
+<div class="msgCont" style="height: 10vh; margin-top: 5vh">
+    <h2 style="text-transform: uppercase; font-weight: 200">FAQ</h2>
+</div>
+
+<div class="container" style="width: 60vw; margin-top: 3vh; font-size: 2vh">
+    <div class="panel-group" id="accordion">
+
+        <div class="panel panel-default" style="background-color: #171719;">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" style="color: #f1f1f1; text-decoration: none">
+                <div class="panel-heading" style="background-color: #171719; margin: 1vh;">
+                    <h4 class="panel-title" style="text-transform: uppercase">1. What types of photography do you offer?</h4>
+                </div>
+            </a>
+            <div id="collapseOne" class="panel-collapse collapse" style="background-color: #171719;">
+                <div class="panel-body" style="color: #f1f1f1;">We specialize in portrait, wedding, event, and creative photography. We also offer professional headshots, branding sessions, and engagement shoots.</div>
+            </div>
+        </div>
+
+        <div class="panel panel-default" style="background-color: #171719;">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" style="color: #f1f1f1; text-decoration: none">
+                <div class="panel-heading" style="background-color: #171719; margin: 1vh;">
+                    <h4 class="panel-title" style="text-transform: uppercase">2. Where are you based, and do you travel for shoots?</h4>
+                </div>
+            </a>
+            <div id="collapseTwo" class="panel-collapse collapse" style="background-color: #171719;">
+                <div class="panel-body" style="color: #f1f1f1;">We are based in Kenya, but we are available for local and destination shoots. Travel fees may apply for locations outside our base area.</div>
+            </div>
+        </div>
+
+        <div class="panel panel-default" style="background-color: #171719;">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" style="color: #f1f1f1; text-decoration: none">
+                <div class="panel-heading" style="background-color: #171719; margin: 1vh;">
+                    <h4 class="panel-title" style="text-transform: uppercase">3. How do I book a session?</h4>
+                </div>
+            </a>
+            <div id="collapseThree" class="panel-collapse collapse" style="background-color: #171719;">
+                <div class="panel-body" style="color: #f1f1f1;">You can book a session by contacting us through our website, email, or social media. A deposit may be required to secure your date.</div>
+            </div>
+        </div>
+
+        <div class="panel panel-default" style="background-color: #171719;">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour" style="color: #f1f1f1; text-decoration: none">
+                <div class="panel-heading" style="background-color: #171719; margin: 1vh;">
+                    <h4 class="panel-title" style="text-transform: uppercase">4. What should I wear for my photoshoot?</h4>
+                </div>
+            </a>
+            <div id="collapseFour" class="panel-collapse collapse" style="background-color: #171719;">
+                <div class="panel-body" style="color: #f1f1f1;">Wear outfits that make you feel comfortable and confident. Solid colors, neutral tones, and minimal patterns work best. If unsure, we can provide guidance based on your session type.</div>
+            </div>
+        </div>
+
+        <div class="panel panel-default" style="background-color: #171719;">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive" style="color: #f1f1f1; text-decoration: none">
+                <div class="panel-heading" style="background-color: #171719; margin: 1vh;">
+                    <h4 class="panel-title" style="text-transform: uppercase">5. How long does it take to receive my photos?</h4>
+                </div>
+            </a>
+            <div id="collapseFive" class="panel-collapse collapse" style="background-color: #171719;">
+                <div class="panel-body" style="color: #f1f1f1;">
+                    Turnaround time depends on the type of shoot, but typically:<br>
+                    <strong>Portrait & Engagement Sessions:</strong> 7-14 days<br>
+                    <strong>Weddings & Events:</strong> 4-6 weeks
+                </div>
+            </div>
+        </div>
+
+        <div class="panel panel-default" style="background-color: #171719;">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix" style="color: #f1f1f1; text-decoration: none">
+                <div class="panel-heading" style="background-color: #171719; margin: 1vh;">
+                    <h4 class="panel-title" style="text-transform: uppercase">6. Do you edit all the photos?</h4>
+                </div>
+            </a>
+            <div id="collapseSix" class="panel-collapse collapse" style="background-color: #171719;">
+                <div class="panel-body" style="color: #f1f1f1;">Yes! We professionally edit and enhance all final images to ensure they meet our high-quality standards.</div>
+            </div>
+        </div>
+
+        <div class="panel panel-default" style="background-color: #171719;">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" style="color: #f1f1f1; text-decoration: none">
+                <div class="panel-heading" style="background-color: #171719; margin: 1vh;">
+                    <h4 class="panel-title" style="text-transform: uppercase">7. How will I receive my photos?</h4>
+                </div>
+            </a>
+            <div id="collapseSeven" class="panel-collapse collapse" style="background-color: #171719;">
+                <div class="panel-body" style="color: #f1f1f1;">You will receive your photos via a private online gallery or USB drive (for weddings and larger shoots). Prints and albums are available upon request.</div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+
 
 
 </body>
